loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:11: error: value ! is not a member of Boolean
} while (sortieTrouvee()!) 
                        ^